# mxshop-api/user-web/api/user.go
@@ -37,8 +37,9 @@ func removeTopStruct(fields map[string]string) map[string]string {
 // @Param x-token header string true "token令牌"
 // @Param page query int true "页码" default(1)
 // @Param size query int true "页面大小" default(10)
-// @success 200  {object} utils.Response{data=interface{},Errors=nil}
+// @success 200  {array} response.UserResponse
 // @Router  /v1/user/list [get]
+// @ID /v1/user/list
 func GetUserList(ctx *gin.Context) {
 
 	page, _ := strconv.Atoi(ctx.DefaultQuery("page", "1"))
